--- a/proyecto_pc5/templates/nginx_https.conf.j2
+++ b/proyecto_pc5/templates/nginx_https.conf.j2
@@ -14,7 +14,10 @@ server {
     ssl_certificate_key {{ ssl_certificate_key_path }};
 
     location / {
-        root /var/www/html;
-        index index.html index.htm index.nginx-debian.html;
+        proxy_pass http://flask_app;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
