--- a/proyecto_pc5/templates/nginx_https.conf.j2
+++ b/proyecto_pc5/templates/nginx_https.conf.j2
@@ -1,3 +1,9 @@
+upstream flask_app {
+    server 127.0.0.1:8000;
+    server 127.0.0.1:8001;
+    server 127.0.0.1:8002;
+}
+
 server {
     listen 80;
     server_name {{ server_name }};
