--- a/proyecto_pc5/templates/prometheus.yml.j2
+++ b/proyecto_pc5/templates/prometheus.yml.j2
@@ -2,10 +2,13 @@ global:
   scrape_interval: 15s
 
 scrape_configs:
-  - job_name: 'prometheus'
+  - job_name: 'flask_app'
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: ['localhost:4001']
 
   - job_name: 'node_exporter'
     static_configs:
       - targets: ['localhost:9100']
+
+rule_files:
+  - /etc/prometheus/alert.rules
